--- a/i3/config
+++ b/i3/config
@@ -109,5 +109,6 @@ hide_edge_borders smart
 exec --no-startup-id /usr/bin/feh --bg-scale ~/.config/i3/img/SBKjnxm.jpg 
 exec --no-startup-id nm-applet
 exec --no-startup-id setxkbmap pl
+exec --no-startup-id picom -b
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id dunst
