--- a/i3/config
+++ b/i3/config
@@ -106,7 +106,7 @@ bindsym $mod+Escape exec --no-startup-id i3lock-fancy-rapid 5 3
 bindsym $mod+F4 mode "$mode_system"
 hide_edge_borders smart
 
-exec --no-startup-id /usr/bin/feh --bg-scale ~/.config/i3/img/florest-stair2-mola.jpg
+exec --no-startup-id /usr/bin/feh --bg-scale /usr/share/pixmaps/wallpaper.jpg
 exec --no-startup-id nm-applet
 exec --no-startup-id setxkbmap pl
 exec --no-startup-id picom -b
