--- a/lightdm/lightdm-mini-greeter.conf
+++ b/lightdm/lightdm-mini-greeter.conf
@@ -6,11 +6,11 @@
 # The user to login as.
 user = maroslaw
 # Whether to show the password input's label.
-show-password-label = true
+show-password-label = false
 # The text of the password input's label.
 password-label-text = Password:
 # The text shown when an invalid password is entered. May be blank.
-invalid-password-text = Invalid Password
+invalid-password-text = Invalid
 # Show a blinking cursor in the password input.
 show-input-cursor = true
 # The text alignment for the password input. Possible values are:
