--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,6 +1,12 @@
-opacity-rule = [
-  "100:class_g = 'firefox'",
-  "99:focused",
-  "90:!focused"
-];
+blur:
+{   
+    method = "gaussian";
+    size = 20;
+    deviation = 5.0;
+};
+backend = "glx";
+blur-background = true;
 
+blur-background-exclude = [
+  "class_g = 'polybar'"
+];
