--- a/termite/config
+++ b/termite/config
@@ -14,36 +14,55 @@ cursor_blink = system
 cursor_shape = underline
 filter_unmatched_urls = true
 
-# Copyright (c) 2016-present Arctic Ice Studio <development@arcticicestudio.com>
-# Copyright (c) 2016-present Sven Greb <code@svengreb.de>
-
-# Project:    Nord Termite
-# Repository: https://github.com/arcticicestudio/nord-termite
-# License:    MIT
-
 [colors]
-cursor = #d8dee9
-cursor_foreground = #2e3440
-foreground = #d8dee9
-foreground_bold = #d8dee9
-background = #2e3440
-highlight = #4c566a
-color0  = #3b4252
-color1  = #bf616a
-color2  = #a3be8c
-color3  = #ebcb8b
-color4  = #81a1c1
-color5  = #b48ead
-color6  = #88c0d0
-color7  = #e5e9f0
-color8  = #4c566a
-color9  = #bf616a
-color10 = #a3be8c
-color11 = #ebcb8b
-color12 = #81a1c1
-color13 = #b48ead
-color14 = #8fbcbb
-color15 = #eceff4
+# Base16 Gruvbox dark, pale
+# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+
+foreground          = #dab997
+foreground_bold     = #dab997
+cursor              = #dab997
+cursor_foreground   = #262626
+background          = rgba(38, 38, 38, 0.8)
+
+# 16 color space
+
+# Black, Gray, Silver, White
+color0  = #262626
+color8  = #8a8a8a
+color7  = #dab997
+color15 = #ebdbb2
+
+# Red
+color1  = #d75f5f
+color9  = #d75f5f
+
+# Green
+color2  = #afaf00
+color10 = #afaf00
+
+# Yellow
+color3  = #ffaf00
+color11 = #ffaf00
+
+# Blue
+color4  = #83adad
+color12 = #83adad
+
+# Purple
+color5  = #d485ad
+color13 = #d485ad
+
+# Teal
+color6  = #85ad85
+color14 = #85ad85
+
+# Extra colors
+color16 = #ff8700
+color17 = #d65d0e
+color18 = #3a3a3a
+color19 = #4e4e4e
+color20 = #949494
+color21 = #d5c4a1
 
 [hints]
 
