remove bottom bar

--- a/polybar/config
+++ b/polybar/config
@@ -20,9 +20,10 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 padding-left = 0
 padding-right = 0
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = 0
 separator =
+modules-right = vpn work dirty memory cpu_temp nvme_temp volume
 modules-center = i3
 font-0 = Terminus (TTF):size=6;2
 font-1 = 
@@ -40,28 +41,6 @@ underline-color = ${self.foreground}
 underline-size = 2
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
-
-[bar/bottom]
-enable-ipc = true
-bottom = true
-monitor = DP-0
-width = 100%
-height = 22
-dpi = 192
-background = ${colors.background}
-foreground = ${colors.foreground}
-line-size = 1
-padding-left = 0
-padding-right = 0
-module-margin-left = 0
-module-margin-right = 0
-separator = 
-font-0 = Terminus (TTF):size=6
-overline-size = 1
-underline-size = 0
-underline-color = ${colors.alert}
-modules-center = volume dirty memory cpu_temp nvme_temp vpn work
-wm-restack = i3
 
 [module/memory]
 type = custom/script
@@ -84,7 +63,6 @@ type = custom/script
 exec = ~/.config/polybar/scripts/dirty
 format = <label>
 format-padding = 1
-format-underline = #4c566a
 label = %{F#dab997} USB %{F-} %output%
 interval = 1
 
