--- a/polybar/config
+++ b/polybar/config
@@ -23,6 +23,7 @@ padding-right = 0
 module-margin-left = 0
 module-margin-right = 0
 separator =
+modules-left = date
 modules-right = vpn work dirty memory cpu_temp nvme_temp volume
 modules-center = i3
 font-0 = Terminus (TTF):size=6;2
@@ -41,6 +42,12 @@ underline-color = ${self.foreground}
 underline-size = 2
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
+
+[module/date]
+type = internal/date
+interval = 1.0
+date =  %b %d %H:%M
+format-padding = 1
 
 [module/memory]
 type = custom/script
@@ -86,7 +93,7 @@ interval = 5
 type = custom/script
 exec = pgrep openvpn
 interval = 3
-label = %{F#dab997} VPN %{F-}
+label = %{F#b8bb26} VPN %{F-}
 format-padding = 1
 
 [module/work]
@@ -94,7 +101,7 @@ type = custom/script
 exec = echo work
 exec-if = ip addr show | grep 11.11.11
 format = <label>
-label = %{F#dab997} WORK VPN %{F-}
+label = %{F#b8bb26} WORK VPN %{F-}
 interval = 5
 format-padding = 1
 
