--- a/polybar/config
+++ b/polybar/config
@@ -1,6 +1,6 @@
 [colors]
 foreground = #eceff4
-background = #2e344000
+background = #002e3440
 red = #bf616a
 foreground-alt = ${xrdb:color7:#222}
 primary = ${xrdb:color7:#222}
@@ -26,7 +26,7 @@ separator =
 modules-left = date
 modules-right = vpn work dirty memory cpu_temp nvme_temp volume
 modules-center = i3
-font-0 = Terminus (TTF):size=6;2
+font-0 = Terminus (TTF):style=Bold:size=6;2
 font-1 = 
 
 wm-restack = i3
@@ -48,6 +48,8 @@ type = internal/date
 interval = 1.0
 date =  %b %d %H:%M
 format-padding = 1
+format-foreground = #282828
+format-background = #fabd2f
 
 [module/memory]
 type = custom/script
