--- a/termite/config
+++ b/termite/config
@@ -11,7 +11,7 @@ scrollback_lines = 10000
 search_wrap = true
 font = Terminus (TTF) 12
 cursor_blink = system
-cursor_shape = underline
+cursor_shape = block
 filter_unmatched_urls = true
 
 [colors]
