--- a/polybar/config
+++ b/polybar/config
@@ -26,7 +26,7 @@ separator =
 modules-left = 
 modules-right = vpn work dirty memory cpu_temp nvme_temp volume date
 modules-center = i3
-font-0 = Terminus (TTF):style=Bold:size=6;2
+font-0 = Terminus (TTF):size=6;2
 font-1 = 
 
 wm-restack = i3
@@ -95,7 +95,7 @@ interval = 5
 type = custom/script
 exec = pgrep openvpn
 interval = 3
-label = %{F#b8bb26} VPN %{F-}
+label = %{B#d3869b}%{F#2e3440} VPN %{F-}%{B-}
 format-padding = 1
 
 [module/work]
@@ -103,7 +103,7 @@ type = custom/script
 exec = echo work
 exec-if = ip addr show | grep 11.11.11
 format = <label>
-label = %{F#b8bb26} WORK VPN %{F-}
+label = %{B#d3869b}%{F#2e3440} WORK VPN %{F-}%{B-}
 interval = 5
 format-padding = 1
 
