--- a/polybar/config
+++ b/polybar/config
@@ -27,7 +27,7 @@ modules-left =
 modules-right = vpn work dirty memory cpu_temp nvme_temp volume date
 modules-center = i3
 font-0 = Terminus (TTF):size=6;2
-font-1 = 
+font-1 = Terminus (TTF):style=Bold:size=6;2
 
 wm-restack = i3
 tray-position = none
@@ -44,12 +44,11 @@ scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
 [module/date]
-type = internal/date
+type = custom/script
 interval = 1.0
-date =  %b %d %H:%M
+exec = date +"%d/%m %H:%M"
 format-padding = 1
-format-foreground = #282828
-format-background = #d3869b
+label = %{T2}%{F#d3869b} %output% %{F-}%{T-}
 
 [module/memory]
 type = custom/script
@@ -95,7 +94,7 @@ interval = 5
 type = custom/script
 exec = pgrep openvpn
 interval = 3
-label = %{B#d3869b}%{F#2e3440} VPN %{F-}%{B-}
+label = %{T2}%{F#d3869b} VPN %{F-}%{T-}
 format-padding = 1
 
 [module/work]
@@ -103,7 +102,7 @@ type = custom/script
 exec = echo work
 exec-if = ip addr show | grep 11.11.11
 format = <label>
-label = %{B#d3869b}%{F#2e3440} WORK VPN %{F-}%{B-}
+label = %{T2}%{F#d3869b} WORK VPN %{F-}%{T-}
 interval = 5
 format-padding = 1
 
