--- a/polybar/config
+++ b/polybar/config
@@ -132,11 +132,11 @@ ws-icon-5 = 5;INTELLIJ
 ws-icon-6 = 6;LOGS
 ws-icon-7 = 7;BPMN
 ws-icon-8 = 8;STEAM
-ws-icon-9 = 9;FREE
+ws-icon-9 = 9;READ
 ws-icon-10 = 10;COMPANY
-ws-icon-11 = 11;-
-ws-icon-12 = 12;-
-ws-icon-13 = 13;-
+ws-icon-11 = 11;EOE
+ws-icon-12 = 12;CLUSTER
+ws-icon-13 = 13;BLOG
 ws-icon-14 = 14;-
 ws-icon-15 = 15;-
 ws-icon-16 = 16;-
