--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -10,3 +10,9 @@ blur-background = true;
 blur-background-exclude = [
   "window_type = 'dock'"
 ];
+
+opacity-rule = [
+  "100:focused",
+  "95:!focused"
+];
+
