--- a/i3/config
+++ b/i3/config
@@ -2,11 +2,11 @@ set $mod Mod4
 
 floating_modifier $mod
 
-set_from_resource $fg #d3869b #d3869b
-set_from_resource $bg #8a8a8a #8a8a8a
+set_from_resource $fg #888888 #888888
+set_from_resource $bg #888888 #888888
 
 bindsym $mod+Return exec termite
-bindsym $mod+d exec dmenu_run -fn 'Terminus (TTF)-12' -nb "#2e3440" -nf "#88c0d0" -sb "#88c0d0" -sf "#2e3440"
+bindsym $mod+d exec dmenu_run -fn 'Terminus (TTF)-12' -nb "#303430" -nf "#ffffff" -sb "#cdcdc1" -sf "#303430"
 bindsym $mod+Shift+q kill
 
 bindsym $mod+Left focus left
@@ -53,9 +53,9 @@ bindsym $mod+Shift+8 workspace 19
 bindsym $mod+Shift+9 workspace 20
 bindsym $mod+Shift+0 workspace 21
 
-gaps inner 30
-gaps outer 20
-for_window [class="^.*"] border pixel 1
+gaps inner 0
+gaps outer 3
+for_window [class="^.*"] border pixel 3
 
 # class                 border  backgr. text indicator child_border
 client.focused          $bg     $bg     $fg  $bg       $fg
@@ -109,7 +109,8 @@ bindsym $mod+Escape exec --no-startup-id i3lock-fancy-rapid 5 3
 bindsym $mod+F4 mode "$mode_system"
 hide_edge_borders smart
 
-exec --no-startup-id /usr/bin/feh --bg-fill /usr/share/pixmaps/wallpaper.jpg
+#exec --no-startup-id /usr/bin/feh --bg-fill /usr/share/pixmaps/wallpaper.jpg
+#exec --no-startup-id hsetroot -solid "#262626"
 exec --no-startup-id setxkbmap pl
 exec --no-startup-id picom --experimental-backends --backend glx -b
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
