--- a/termite/config
+++ b/termite/config
@@ -1,69 +1,78 @@
 [options]
-scroll_on_output = false
-scroll_on_keystroke = true
-audible_bell = false
-mouse_autohide = false
 allow_bold = true
-dynamic_title = true
-urgent_on_bell = true
+#audible_bell = false
+#bold_is_bright = true
+#cell_height_scale = 1.0
+#cell_width_scale = 1.0
 clickable_url = false
-scrollback_lines = 10000
-search_wrap = true
+dynamic_title = true
 font = Terminus (TTF) 12
+#fullscreen = true
+#icon_name = terminal
+#mouse_autohide = false
+#scroll_on_output = false
+#scroll_on_keystroke = true
+# Length of the scrollback buffer, 0 disabled the scrollback buffer
+# and setting it to a negative value means "infinite scrollback"
+scrollback_lines = 10000
+#search_wrap = true
+#urgent_on_bell = true
+#hyperlinks = false
+
+# $BROWSER is used by default if set, with xdg-open as a fallback
+browser = xdg-open
+
+# "system", "on" or "off"
 cursor_blink = system
+
+# "block", "underline" or "ibeam"
 cursor_shape = block
-filter_unmatched_urls = true
 
+# Hide links that are no longer valid in url select overlay mode
+#filter_unmatched_urls = true
+
+# Emit escape sequences for extra modified keys
+#modify_other_keys = false
+
+# set size hints for the window
+#size_hints = false
+
+# "off", "left" or "right"
+#scrollbar = off
+
+# ====================================
 [colors]
-# Base16 Gruvbox dark, pale
-# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 
-foreground          = #dab997
-foreground_bold     = #dab997
-cursor              = #dab997
-cursor_foreground   = #262626
-background          = rgba(38, 38, 38, 0.8)
-
-# 16 color space
-
-# Black, Gray, Silver, White
-color0  = #262626
-color8  = #8a8a8a
-color7  = #dab997
-color15 = #ebdbb2
+# Black
+color0=   #303430
+color8=   #cdb5cd
 
 # Red
-color1  = #d75f5f
-color9  = #d75f5f
+color1=   #bf7979
+color9=   #f4a45f
 
 # Green
-color2  = #afaf00
-color10 = #afaf00
+color2=   #97b26b
+color10=  #c5f779
 
 # Yellow
-color3  = #ffaf00
-color11 = #ffaf00
+color3=   #cdcdc1
+color11=  #ffffed
 
 # Blue
-color4  = #83adad
-color12 = #83adad
+color4=   #86a2be
+color12=  #98afd9
 
-# Purple
-color5  = #d485ad
-color13 = #d485ad
+# Magenta
+color5=   #d9b798
+color13=  #d7d998
 
-# Teal
-color6  = #85ad85
-color14 = #85ad85
+# Cyan
+color6=   #a1b5cd
+color14=  #a1b5cd
 
-# Extra colors
-color16 = #ff8700
-color17 = #d65d0e
-color18 = #3a3a3a
-color19 = #4e4e4e
-color20 = #949494
-color21 = #d5c4a1
+# White
+color7=   #ffffff
+color15=  #dedede
 
-[hints]
-
-# vim: ft=dosini cms=#%s
+# vim: et sw=2 syn=xdefaults
